--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -64,13 +64,13 @@ jobs:
 
       - name: Create S3 local bucket
         run: |
-          awslocal s3 mb s3://terraform
+          awslocal s3 mb s3://terraform  --create-bucket-configuration LocationConstraint=eu-west-2
 
       - uses: hashicorp/setup-terraform@v2
 
       - name: Terraform Init
         id: init
-        run: terraform init -reconfigure  -backend-config="bucket=terraform" 
+        run: terraform init -reconfigure -backend-config="region=eu-west-2" -backend-config="skip_credentials_validation=true" -backend-config="skip_metadata_api_check=true" -backend-config="bucket=terraform" -backend-config="key=terraform.tfstate" -backend-config="force_path_style=true"
 
       - name: Terraform Plan
         id: plan
