--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -64,7 +64,7 @@ jobs:
 
       - name: Create S3 local bucket
         run: |
-          awslocal s3 mb s3://terraform  --create-bucket-configuration LocationConstraint=eu-west-2
+          awslocal s3api create-bucket --bucket terraform --endpoint-url http://localhost:${{ job.services.localstack.ports[4566] }} --create-bucket-configuration LocationConstraint=eu-west-2
 
       - uses: hashicorp/setup-terraform@v2
 
