--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -66,7 +66,11 @@ jobs:
 
       - name: Create S3 local bucket
         run: |
-          awslocal s3api create-bucket --bucket terraform --endpoint-url http://localhost:${{ job.services.localstack.ports[4566] }} --create-bucket-configuration LocationConstraint=eu-west-2
+          awslocal s3api create-bucket --region eu-west-2 --bucket terraform --endpoint-url http://localhost:${{ job.services.localstack.ports[4566] }} --create-bucket-configuration LocationConstraint=eu-west-2
+
+      - name: Preview awslocal config
+        run: |
+          awslocal configure list
 
       - uses: hashicorp/setup-terraform@v2
 
