--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -1,4 +1,4 @@
-name: Docker # Build Keycloak Docker image for Mafdet
+name: Docker # Build Keycloak Docker image for Mafdet and apply Keycloak settings (realm, users etc)
 on:
   push:
     branches:
@@ -43,13 +43,6 @@ jobs:
       - name: Wait for Keycloak
         run: (docker logs -f keycloak &) | grep -m 1 "Admin console listening on"
         timeout-minutes: 1
-
-      # - name: Configure AWS credentials
-      #   uses: aws-actions/configure-aws-credentials@v1
-      #   with:
-      #     aws-access-key-id: ${{ secrets.mafdet_KEYCLOAK_DEPLOY_BOT_ACCESS_KEY_ID }}
-      #     aws-secret-access-key: ${{ secrets.mafdet_KEYCLOAK_DEPLOY_BOT_SECRET_ACCESS_KEY }}
-      #     aws-region: eu-west-2
 
       - name: Start LocalStack
         uses: LocalStack/setup-localstack@v0.1.2
