--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,57 +1,57 @@
-name: Deploy
-on:
-  workflow_dispatch:
-  push:
-    branches:
-      - main
+# name: Deploy
+# on:
+#   workflow_dispatch:
+#   push:
+#     branches:
+#       - main
 
-jobs:
-  terraform-plan-and-apply:
-    strategy:
-      matrix:
-        stage: ["development", "test", "production"]
-      # When set to true, GitHub cancels all in-progress jobs if any matrix job fails.
-      fail-fast: true
-      # The maximum number of jobs that can run simultaneously
-      max-parallel: 1
-    # set the environment to use (environment must exist and be named the same as the stage here)
-    environment:
-      name: ${{ matrix.stage }}
-    defaults:
-      run:
-        working-directory: ./config
-    runs-on: ubuntu-latest
-    env:
-      KEYCLOAK_CLIENT_ID: ${{ secrets.tf_kc_client_id }}
-      KEYCLOAK_CLIENT_SECRET: ${{ secrets.tf_kc_client_secret }}
-      KEYCLOAK_REALM: ${{ secrets.tf_kc_realm }}
-      KEYCLOAK_URL: ${{ secrets.tf_kc_url }}
-      TF_VAR_mafdet_realm: ${{ secrets.tf_kc_realm }}
-      TF_VAR_mafdet_url: ${{ secrets.tf_mafdet_url }}
-    steps:
-      - uses: actions/checkout@v2
-      - uses: hashicorp/setup-terraform@v2
+# jobs:
+#   terraform-plan-and-apply:
+#     strategy:
+#       matrix:
+#         stage: ["development", "test", "production"]
+#       # When set to true, GitHub cancels all in-progress jobs if any matrix job fails.
+#       fail-fast: true
+#       # The maximum number of jobs that can run simultaneously
+#       max-parallel: 1
+#     # set the environment to use (environment must exist and be named the same as the stage here)
+#     environment:
+#       name: ${{ matrix.stage }}
+#     defaults:
+#       run:
+#         working-directory: ./config
+#     runs-on: ubuntu-latest
+#     env:
+#       KEYCLOAK_CLIENT_ID: ${{ secrets.tf_kc_client_id }}
+#       KEYCLOAK_CLIENT_SECRET: ${{ secrets.tf_kc_client_secret }}
+#       KEYCLOAK_REALM: ${{ secrets.tf_kc_realm }}
+#       KEYCLOAK_URL: ${{ secrets.tf_kc_url }}
+#       TF_VAR_mafdet_realm: ${{ secrets.tf_kc_realm }}
+#       TF_VAR_mafdet_url: ${{ secrets.tf_mafdet_url }}
+#     steps:
+#       - uses: actions/checkout@v2
+#       - uses: hashicorp/setup-terraform@v2
 
-      - name: Terraform Workspace
-        id: workspace
-        run: terraform workspace dev
+#       - name: Terraform Workspace
+#         id: workspace
+#         run: terraform workspace dev
 
-      - name: Terraform Init
-        id: init
-        # To reinstate changes uncomment the following
-        # run: terraform init -reconfigure -backend-config="region=${{ secrets.tf_be_region }}" -backend-config="access_key=${{ secrets.tf_be_access_key }}" -backend-config="secret_key=${{ secrets.tf_be_secret_key }}" -backend-config="bucket=${{ secrets.tf_be_bucket }}" -backend-config="key=${{ secrets.tf_be_bucket_key }}"
-        # To reinstate changes, remove line below
-        run: terraform init -backend=false # As the S3 buckets are decommissioned, backend is set to false.
+#       - name: Terraform Init
+#         id: init
+#         # To reinstate changes uncomment the following
+#         # run: terraform init -reconfigure -backend-config="region=${{ secrets.tf_be_region }}" -backend-config="access_key=${{ secrets.tf_be_access_key }}" -backend-config="secret_key=${{ secrets.tf_be_secret_key }}" -backend-config="bucket=${{ secrets.tf_be_bucket }}" -backend-config="key=${{ secrets.tf_be_bucket_key }}"
+#         # To reinstate changes, remove line below
+#         run: terraform init -backend=false # As the S3 buckets are decommissioned, backend is set to false.
 
-      - name: Terraform Validate
-        id: validate
-        run: terraform validate
+#       - name: Terraform Validate
+#         id: validate
+#         run: terraform validate
 
-      - name: Terraform Plan
-        id: plan
-        run: terraform plan -input=false -out=tfplan
+#       - name: Terraform Plan
+#         id: plan
+#         run: terraform plan -input=false -out=tfplan
 
-    # To reinstate changes uncomment the following
-    # - name: Terraform Apply
-    #   id: apply
-    #   run: terraform apply -input=false -auto-approve tfplan
+#     # To reinstate changes uncomment the following
+#     # - name: Terraform Apply
+#     #   id: apply
+#     #   run: terraform apply -input=false -auto-approve tfplan
